--- a/src/lib/list.scss
+++ b/src/lib/list.scss
@@ -5,7 +5,7 @@ $c2: #eee;
 $sel1: 'li:nth-child(odd)';
 $sel2: 'li:nth-child(even)';
 
-ul {
+ul.list-l73tg8 {
     > li:nth-child(odd) {
         background: $c2;
         ul li:nth-child(odd) {
